# nexus_encrypted_control

./: CMakeLists.txt  README.md  package.xml  setup.py
.github/: README.md
config/robot/: base_multiple.xacro  robot_base_multiple.xacro
config/sensor/: hokuyo_utm30lx.urdf.xacro
gazebo/worlds/: nexus.world
launch/: N_nexus.launch  N_world.launch  Spawn_N_agents_gazebo.launch  sim_spawn_and_control  sim_spawn_and_control_encrypted_formation  sim_spawn_and_control_encrypted_formation_with_estimator  sim_spawn_and_control_encrypted_formation_with_estimator_gnome  sim_spawn_and_control_encrypted_formation_with_estimator_v2  sim_spawn_and_control_encrypted_formation_with_estimator_v2_debug  sim_spawn_and_control_encrypted_formation_with_estimator_v2_debug_montecarlo  sim_spawn_and_control_encrypted_formation_with_estimator_v2_robust  sim_spawn_and_control_encrypted_one_robot  sim_spawn_and_control_encrypted_one_robot_FILTER  sim_spawn_and_control_encrypted_one_robot_filter  sim_spawn_and_control_encrypted_one_robot_filter2  sim_spawn_and_control_est  sim_spawn_and_control_new  test_script
rviz/: nexus.rviz  nexus_rviz.launch
scripts/: hom_dec2.py  hom_enc2.py  listener_data.py
scripts/noencryption/: controller_N.py  controller_N_est.py  dataprocessingnode_N.py
scripts/one_robot_encrypted/: controller_1_hom_encr2.py
scripts/robot_formation_encrypted/: controller_N_hom_encr_formation.py
scripts/robot_formation_encrypted_estimator/: controller_N_hom_encr_formation_est.py  controller_N_hom_encr_formation_est_v2.py  errn_1.csv  (+11 more)
test/: Kimpy_mult.py  README.txt
(+30 files in other folders)
